fix: padding on ios devices with notch

--- a/src/app/components/notices/notices-filter/notices-filter.component.scss
+++ b/src/app/components/notices/notices-filter/notices-filter.component.scss
@@ -86,7 +86,7 @@ hr {
     margin: 1rem 1rem 0 1rem;
     position: sticky;
     bottom: 0;
-    height: 116px;
+    height: calc(116px + env(safe-area-inset-bottom));
 
     border-top: 1px solid #BBBFC2;
     background-color: white;
